# binsight

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/heavy_app/: Cargo.toml
examples/heavy_app/src/: main.rs
src/: main.rs
src/analysis/: mod.rs
src/binary/: mod.rs  pdb_support.rs
src/commands/: analyze.rs  build.rs  diagnose.rs  diff.rs  explore.rs  mod.rs  top.rs
src/ui/: mod.rs  tui.rs
