[package]
name = "binsight"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
object = { version = "0.32", features = ["read"] }
anyhow = "1.0"
comfy-table = { version = "7.1", features = ["tty"] }
memmap2 = "0.9"
colored = "2.1"
rustc-demangle = "0.1"
ratatui = "0.26"
crossterm = "0.27"
addr2line = { version = "0.21", features = ["std", "object"] }
gimli = "0.28"
pdb = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
